@@ -3,4 +3,6 @@ package frysk.gui.srcwin.prefs;
 public interface PreferenceViewer {
     
     public void showPreferenceEditor(ColorPreference toShow);
+    
+    public void saveAll();
 }
